--- a/templates/default/edit.html
+++ b/templates/default/edit.html
@@ -153,6 +153,10 @@
                     </td>
                 </tr>
             </table>
+            <small class="text-muted d-block mt-2">
+                <i class="bi bi-info-circle"></i> 
+                {% trans %}Tip: Enter just the hostname (e.g. 'www') and the zone name will be added automatically. Use '@' for the zone apex/root.{% endtrans %}
+            </small>
         </form>
     </div>
 </div>
@@ -658,6 +662,10 @@
                     </td>
                 </tr>
             </table>
+            <small class="text-muted d-block mt-2">
+                <i class="bi bi-info-circle"></i> 
+                {% trans %}Tip: Enter just the hostname (e.g. 'www') and the zone name will be added automatically. Use '@' for the zone apex/root.{% endtrans %}
+            </small>
         </form>
     </div>
 </div>
